Avoid unnecessary UPS page scrollbar

--- a/ups/css/main.css
+++ b/ups/css/main.css
@@ -26,7 +26,7 @@
 html{ height:100%; }
 
 body{
-  min-height: 100%;
+  min-height: calc(100% - 40px);
   font-family: "Segoe UI", "Noto Sans KR", Arial, sans-serif;
   margin: 20px;
   background: var(--bg-accent);
